fix for search icon and reset btn overlap

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1331,8 +1331,8 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 		input#edit-field-end-date {
     		margin-bottom: 0px;
 		}
-		input#edit-reset {
-		    margin-top: 30px;
+		input#edit-submit-events-search {
+		    margin-bottom: 30px!important;
 		}
 	}
 
@@ -1357,7 +1357,7 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 		}
 	}
 	.form-row:after {
-		right: 30px;
+		right: 40px;
 	    background: url(/themes/custom/myusf/images/src/search-gray.svg) 0 0 no-repeat;
 	    width: 20px;
 	    height: 29px;
